--- a/redCore/src/theme/variables.scss
+++ b/redCore/src/theme/variables.scss
@@ -8,8 +8,8 @@
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: rgb(62, 168, 38);
+  --ion-color-primary-tint: rgb(118, 185, 41);
 
   /** secondary **/
   --ion-color-secondary: #5CF64A;
