--- a/redCore/src/app/menu/menu.page.html
+++ b/redCore/src/app/menu/menu.page.html
@@ -1,9 +1,11 @@
 <ion-split-pane>
 
-  <ion-menu contentid="content">
+  <ion-menu contentId="content">
 
     <ion-header>
+      <ion-toolbar color="primary">
       <ion-title>Menu</ion-title>
+      </ion-toolbar>
     </ion-header>
 
     <ion-content>
@@ -18,5 +20,5 @@
   </ion-menu>
 
   <ion-router-outlet id="content" main></ion-router-outlet>
-  
+
 </ion-split-pane>
