--- a/redCore/src/app/tab3/tab3.page.html
+++ b/redCore/src/app/tab3/tab3.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        Tab Three
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content></ion-content>
