Update con funciones básicas

--- a/redCore/src/app/tab2/tab2.page.html
+++ b/redCore/src/app/tab2/tab2.page.html
@@ -4,9 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Tab Two
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content></ion-content>
