--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-split-pane>
+
+        <ion-menu contentId="content">
+      
+          <ion-header>
+            <ion-toolbar color="primary">
+            <ion-title>Menu</ion-title>
+            </ion-toolbar>
+          </ion-header>
+      
+          <ion-content>
+            <ion-list>
+              <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
+                <ion-item [routerLink]="page.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(page.url)">
+                  <ion-label>{{ page.title }}</ion-label>
+                </ion-item>
+              </ion-menu-toggle>
+            </ion-list>
+          </ion-content>
+        </ion-menu>
+      
+        <ion-router-outlet id="content" main></ion-router-outlet>
+      
+      </ion-split-pane>
 </ion-app>
