--- a/redCore/src/app/tabs/tabs.page.html
+++ b/redCore/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
 
     <ion-tab-bar slot="bottom">
       
-      <ion-tab-button tab="Profile">
+      <ion-tab-button tab="profile">
         <ion-icon name="md-contact"></ion-icon>
         <ion-label>Profile</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="Home">
+      <ion-tab-button tab="home">
         <ion-icon name="ios-home"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="Messages">
+      <ion-tab-button tab="messages">
         <ion-icon name="md-chatboxes"></ion-icon>
         <ion-label>Messages</ion-label>
       </ion-tab-button>
