--- a/redCore/src/app/tab1/tab1.page.html
+++ b/redCore/src/app/tab1/tab1.page.html
@@ -1,13 +1,16 @@
 <ion-header>
-    <ion-toolbar color="primary">
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        Profile
-      </ion-title>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-title (click)="loadData()" style="text-align: center">
+      @{{user}}
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
-  
-<ion-content></ion-content>
+
+<ion-content>
+  <div class="banner">
+    <br><br><br><br><br>
+    a
+    <br><br><br><br><br>
+  </div>
+</ion-content>
 
