--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -16,8 +16,19 @@
                   <ion-label>{{ page.title }}</ion-label>
                 </ion-item>
               </ion-menu-toggle>
+
+         
             </ion-list>
           </ion-content>
+          
+          <ion-footer>
+            <ion-menu-toggle auto-hide="true" >
+            <ion-item tappable routerLink="/login" routerDirection="root">
+            <ion-icon name="log-out" slot="start"></ion-icon>
+            Logout
+            </ion-item>
+            </ion-menu-toggle>
+          </ion-footer>
         </ion-menu>
       
         <ion-router-outlet id="content" main></ion-router-outlet>
