--- a/redCore/src/app/tabs/tabs.page.html
+++ b/redCore/src/app/tabs/tabs.page.html
@@ -2,20 +2,30 @@
 
     <ion-tab-bar slot="bottom">
       
-      <ion-tab-button tab="profile">
+      <ion-tab-button *ngIf="!isLoggedIn()" (click)="redirectToLogin()"> 
+          <ion-icon name="md-contact"></ion-icon>
+          <ion-label>Profile</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="profile" *ngIf="isLoggedIn()"> 
         <ion-icon name="md-contact"></ion-icon>
         <ion-label>Profile</ion-label>
       </ion-tab-button>
-  
+
+
       <ion-tab-button tab="home">
         <ion-icon name="ios-home"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="messages">
+      <ion-tab-button *ngIf="!isLoggedIn()" (click)="redirectToLogin()">
         <ion-icon name="md-chatboxes"></ion-icon>
         <ion-label>Messages</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="messages" *ngIf="isLoggedIn()">
+        <ion-icon name="md-chatboxes"></ion-icon>
+        <ion-label>Messages</ion-label>
+      </ion-tab-button>
+
     </ion-tab-bar>
   
   </ion-tabs>
