--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -23,7 +23,7 @@
           
           <ion-footer>
             <ion-menu-toggle auto-hide="true" >
-            <ion-item tappable routerLink="/login" routerDirection="root">
+            <ion-item (click)="logOut()" routerLink="/login" routerDirection="root">
             <ion-icon name="log-out" slot="start"></ion-icon>
             Logout
             </ion-item>
