--- a/redCore/src/app/foro/lista-foros/lista-foros.page.html
+++ b/redCore/src/app/foro/lista-foros/lista-foros.page.html
@@ -1,9 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>listaForos</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        Foros
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
-
+  <ion-card *ngFor="let foro of foros; index as i" padding>
+    <p style="font-size: 25px; text-align: center">{{foro.title}}</p>
+    <p style="font-size: 20px; text-align: center">{{foro.description}}</p>
+    <ion-button expand="full" shape="round" (click)="gotoForo(foro.title)">Ir al foro</ion-button>
+  </ion-card>
+  <ion-footer no-shadow>
+    <ion-grid>
+      <ion-button expand="full" shape="round">Crear foro</ion-button>
+    </ion-grid>
+  </ion-footer>
 </ion-content>
