--- a/redCore/src/app/foro/lista-preguntas/lista-preguntas.page.html
+++ b/redCore/src/app/foro/lista-preguntas/lista-preguntas.page.html
@@ -1,9 +1,19 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>listaPreguntas</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header *ngIf="hasLoaded">
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        {{foro.title}}
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content>
+
+<ion-content *ngIf="hasLoaded">
+  <ion-card *ngFor="let pregunta of foro.preguntas" padding>
+    <h2>{{pregunta.title}}</h2>
+    {{pregunta.text}}
+  </ion-card>
 
 </ion-content>
