--- a/redCore/src/app/foro/lista-respuestas/lista-respuestas.page.html
+++ b/redCore/src/app/foro/lista-respuestas/lista-respuestas.page.html
@@ -4,11 +4,52 @@
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
       <ion-title>
-        {{foro.title}}
+        {{title}}
       </ion-title>
     </ion-toolbar>
   </ion-header>
 
 <ion-content *ngIf="hasLoaded">
+  <ion-card padding>
+    <ion-grid>
+      <ion-item>
+        <ion-col>
+          <ion-avatar>
+            <img src="http://fridge.coredumped.es/{{pregunta.user.picture}}">
+          </ion-avatar>
+        </ion-col>
+        <ion-col>
+          <ion-label>{{pregunta.user.username}}</ion-label>
+        </ion-col>
+        <ion-col>{{pregunta.published}}</ion-col>
+      </ion-item>
+      <ion-item>
+        {{pregunta.title}}
+      </ion-item>
+      <ion-card-content>
+        {{pregunta.text}}
+      </ion-card-content>
+    </ion-grid>
+  </ion-card>
+  <ion-card *ngFor="let respuesta of pregunta.respuestas; index as i" padding>
+    <ion-grid>
+      <ion-item>
+        <ion-col>
+          {{respuesta.published}}
+        </ion-col>
+        <ion-col>
+          {{respuesta.user.username}}
+        </ion-col>
+        <ion-col>
+          <ion-avatar>
+            <img src="http://fridge.coredumped.es/{{respuesta.user.picture}}">
+          </ion-avatar>
+        </ion-col>
+      </ion-item>
+      <ion-card-content>
+        {{respuesta.text}}
+      </ion-card-content>
+    </ion-grid>
+  </ion-card>
 </ion-content>
     
