--- a/redCore/src/app/foro/lista-foros/lista-foros.page.html
+++ b/redCore/src/app/foro/lista-foros/lista-foros.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header *ngIf="hasLoaded">
     <ion-toolbar color="primary">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
@@ -9,7 +9,7 @@
     </ion-toolbar>
   </ion-header>
 
-<ion-content>
+<ion-content *ngIf="hasLoaded">
   <ion-card *ngFor="let foro of foros; index as i" padding>
     <p style="font-size: 25px; text-align: center">{{foro.title}}</p>
     <p style="font-size: 20px; text-align: center">{{foro.description}}</p>
@@ -17,7 +17,7 @@
   </ion-card>
   <ion-footer no-shadow>
     <ion-grid>
-      <ion-button expand="full" shape="round">Crear foro</ion-button>
+      <ion-button *ngIf="currentUser.user.rol.valueOf() > 0" expand="full" shape="round" (click)="createForo()">Crear foro</ion-button>
     </ion-grid>
   </ion-footer>
 </ion-content>
