--- a/redCore/src/app/foro/lista-respuestas/lista-respuestas.page.html
+++ b/redCore/src/app/foro/lista-respuestas/lista-respuestas.page.html
@@ -51,5 +51,15 @@
       </ion-card-content>
     </ion-grid>
   </ion-card>
+  <ion-footer>
+    <ion-grid>
+      <ion-button expand="full" shape="round" *ngIf="!pregunta.solved"> Contestar </ion-button>
+      <ion-card *ngIf="pregunta.solved">
+        <ion-card-content>
+          La pregunta ha sido marcada como respondida
+        </ion-card-content>
+      </ion-card>
+    </ion-grid>
+  </ion-footer>
 </ion-content>
     
