--- a/redCore/src/app/foro/lista-preguntas/lista-preguntas.page.html
+++ b/redCore/src/app/foro/lista-preguntas/lista-preguntas.page.html
@@ -21,19 +21,24 @@
       <p text-center>Usuarios en el foro: {{foro.members.length}}</p>
    </ion-col>
   </ion-grid>
-  <ion-card *ngFor="let pregunta of foro.preguntas; index as i" padding  (click)="goToQuestion(i)">
+  <ion-card *ngFor="let pregunta of foro.preguntas.slice().reverse(); index as i" padding  (click)="goToQuestion(i)">
     <h2 text-center>{{pregunta.title}}</h2>
-      {{pregunta.text}}<br>
-      <ion-grid>
-        <ion-row>
+    <ion-grid>
+        <ion-item>
           <ion-col>
-            {{pregunta.user.username}}
+            <ion-avatar>
+              <img src="http://fridge.coredumped.es/{{pregunta.user.picture}}">
+            </ion-avatar>
           </ion-col>
           <ion-col>
-            {{pregunta.published}}
+          {{pregunta.user.username}}
           </ion-col>
-        </ion-row>
+          <ion-col>
+          {{pregunta.published}}
+          </ion-col>
+        </ion-item>
       </ion-grid>
+      <ion-card-content>{{pregunta.text}}</ion-card-content>
   </ion-card>
   <ion-fab *ngIf="isAMember" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="post()">
