--- a/redCore/src/app/foro/respuesta/respuesta.page.html
+++ b/redCore/src/app/foro/respuesta/respuesta.page.html
@@ -1,9 +1,55 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>respuesta</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header *ngIf="hasLoaded">
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        Post
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content>
-
+<ion-content *ngIf="hasLoaded">
+  <ion-card padding>
+    <ion-grid>
+      <ion-item>
+        <ion-col>
+          <ion-avatar>
+            <img src="http://fridge.coredumped.es/{{pregunta.user.picture}}">
+          </ion-avatar>
+        </ion-col>
+        <ion-col>
+          <ion-label>{{pregunta.user.username}}</ion-label>
+        </ion-col>
+        <ion-col>{{pregunta.published}}</ion-col>
+      </ion-item>
+      <ion-item>
+        {{pregunta.title}}
+      </ion-item>
+      <ion-card-content>
+        {{pregunta.text}}
+      </ion-card-content>
+    </ion-grid>
+  </ion-card>
+  <ion-card>
+    <form #form="ngForm" (ngSubmit)="sendData(form)">
+      <ion-grid>
+        <ion-row>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div padding>
+              <ion-item>
+                <ion-textarea rows="10" cols="12" placeholder="Escribe tu respuesta aquí" name="text" type="text" ngModel required></ion-textarea>
+              </ion-item>
+            </div>
+            <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+              </ion-col>
+              <div padding>
+                <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">RESPONDER</ion-button>
+              </div>
+            </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </ion-card>
+    
 </ion-content>
