--- a/redCore/src/app/register/register.page.html
+++ b/redCore/src/app/register/register.page.html
@@ -13,17 +13,16 @@
                 <!--Foto de perfil -->
                   <ion-card>
                       <img *ngIf="!fileUrl" src="assets/no-image.png"/>
-                      <img *ngIf="fileUrl" src="{{fileUrl}}"/>
+                      <img *ngIf="fileUrl" src="{{ fileUrl }}"/>
                       <ion-card-content>
                         <ion-button color="medium" size="large" (click)="cropUpload()">
                           <ion-icon slot="icon-only" name="camera"></ion-icon>
                         </ion-button>
                       </ion-card-content>
-                    </ion-card>
-                     
                 <ion-item>
-                  <ion-input name = "img" type="file" [id]="pic" [(ngModel)]="user.img"></ion-input>
+                  <ion-input name = "img" type="file" [id]="pic" [(ngModel)]="user.img" (ionInput)="updatePicture($event)"></ion-input>
                 </ion-item>
+              </ion-card>
                 <ion-item>
                   <ion-input name="userName" type="text" placeholder="Nombre de usuario" [(ngModel)]="user.userName"></ion-input>
                 </ion-item>
