Wordpress News Updated

--- a/redCore/src/app/tab2/tab2.page.html
+++ b/redCore/src/app/tab2/tab2.page.html
@@ -1,42 +1,44 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>
+            Home
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-    <ion-card-header  (click)="toAbout()" class="welcome-card" style="top: 0px">
+    <ion-card-header (click)="toAbout()" class="welcome-card" style="top: 0px">
         <ion-img src="/assets/logo_cd_white.png"></ion-img>
     </ion-card-header>
-        <ion-button (click)="gotoServices()" shape="round" expand="full"> Servicios </ion-button>
-      <ion-item>
+    <ion-button (click)="gotoServices()" shape="round" expand="full"> Servicios</ion-button>
+    <ion-item>
         <ion-grid>
-          <h2 text-center>Calendario</h2>
+            <h2 text-center>Calendario</h2>
         </ion-grid>
-      </ion-item>
+    </ion-item>
     <ion-img src="../../assets/calendario-mayo-2019.png"></ion-img>
     <ion-item>
-      <ion-grid>
-        <h2 text-center>Noticias</h2>
-      </ion-grid>
+        <ion-grid>
+            <h2 text-center>Noticias</h2>
+        </ion-grid>
     </ion-item>
     <ion-item>
-      <ion-slides [options]="sliderConfig">
-        <ion-slide *ngFor="let item of json.items">
-          <ion-card>
-            <ion-img src="{{item.img}}"></ion-img>
-            <ion-card-header> <h2>{{item.title}}</h2> </ion-card-header>
-            <ion-card-content> {{item.content}} </ion-card-content>
-            <ion-chip color="primary">
-                <ion-label>Leer más</ion-label>
-              </ion-chip>
-          </ion-card>
-        </ion-slide>
-      </ion-slides>
-  </ion-item>
+        <ion-slides [options]="sliderConfig">
+            <ion-slide *ngFor="let item of items">
+                <ion-card>
+                    <ion-img class="News-Header" *ngIf="item.jetpack_featured_media_url != '' " src={{item.jetpack_featured_media_url}} alt="News Image"></ion-img>
+                    <ion-card-header><h2> {{item.title.rendered}} </h2></ion-card-header>
+                    <ion-card-content [innerHTML]="item.excerpt.rendered"></ion-card-content>
+                    <ion-chip color="primary">
+                        <ion-label>
+                            <a href="#"> Leer Más </a>
+                        </ion-label>
+                    </ion-chip>
+                </ion-card>
+            </ion-slide>
+        </ion-slides>
+    </ion-item>
 </ion-content>
