--- a/redCore/src/app/tab2/tab2.page.scss
+++ b/redCore/src/app/tab2/tab2.page.scss
@@ -1,5 +1,8 @@
 .welcome-card ion-img {
   max-height: 35vh;
-  overflow: hidden;
 }
 
+.News-Header {
+  max-height: 200px;
+  overflow: hidden;
+}
