iframe con nevera
...es demasiado simple y ni si quiera funciona bien; la página bloquea la cookie

--- a/redCore/src/app/nevera/nevera.page.html
+++ b/redCore/src/app/nevera/nevera.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>nevera</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Nevera
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <iframe style="width:100%; height:100%" src="http://fridge.coredumped.es"></iframe>
 </ion-content>
