--- a/redCore/src/app/servicios/servicios.page.html
+++ b/redCore/src/app/servicios/servicios.page.html
@@ -18,5 +18,13 @@
       </ion-card-content>
     </ion-grid>
   </ion-card>
+  <ion-card (click)="goToNevera()">
+      <ion-grid>
+        <h2 text-center>Nevera</h2>
+        <ion-card-content text-center>
+          Acceso directo a la nevera de Core, ¡Un supermercado en la escuela!
+        </ion-card-content>
+      </ion-grid>
+    </ion-card>
 
 </ion-content>
