--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -2,23 +2,32 @@
     <ion-split-pane>
 
         <ion-menu contentId="content">
-      
-          <ion-header>
-            <ion-toolbar color="primary">
-            <ion-title>Menu</ion-title>
-            </ion-toolbar>
+            
+          <ion-header id = "banner">
+            <ion-navbar>
+              <ion-title>
+              <img src="./assets/logo_cd_white.png">
+              </ion-title>
+            </ion-navbar>
           </ion-header>
       
           <ion-content>
             <ion-list>
               <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
-                <ion-item [routerLink]="page.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(page.url)">
-                  <ion-label>{{ page.title }}</ion-label>
+                <ion-item tappable [routerLink]="page.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(page.url)">
+                    <ion-icon [name]="page.icon" slot="start" item-left></ion-icon>
+                    <ion-label>{{ page.title }}</ion-label>
+                    <ion-icon name="ios-arrow-forward"></ion-icon>
                 </ion-item>
               </ion-menu-toggle>
+                <ion-item tappable routerLink = "core/login" routerDirection= "root">
+                  <ion-icon name = "ios-power" slot="start" ></ion-icon>
+                  Logout
+                </ion-item>
             </ion-list>
           </ion-content>
         </ion-menu>
+        
       
         <ion-router-outlet id="content" main></ion-router-outlet>
       
