--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -20,12 +20,15 @@
                     <ion-icon name="ios-arrow-forward"></ion-icon>
                 </ion-item>
               </ion-menu-toggle>
-                <ion-item tappable routerLink = "core/login" routerDirection= "root">
-                  <ion-icon name = "ios-power" slot="start" ></ion-icon>
-                  Logout
-                </ion-item>
             </ion-list>
           </ion-content>
+          <ion-footer>
+              <ion-item slot= "end" tappable routerLink = "core/login" routerDirection= "root">
+                <ion-icon name = "ios-power" slot="start" ></ion-icon>
+                <ion-label>Logout</ion-label>
+                <ion-icon name="ios-arrow-forward"></ion-icon>
+              </ion-item>
+            </ion-footer>
         </ion-menu>
         
       
