--- a/redCore/src/app/app.component.html
+++ b/redCore/src/app/app.component.html
@@ -12,6 +12,15 @@
           </ion-header>
       
           <ion-content>
+              <ion-col>
+              <ion-avatar>
+                  <img src="./assets/profileCore.jpg">
+              </ion-avatar>
+              <div class="ion-text-center">
+                  <h3>name</h3>
+                  @Username
+                </div>
+            </ion-col>
             <ion-list>
               <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
                 <ion-item tappable [routerLink]="page.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(page.url)">
@@ -24,6 +33,13 @@
           </ion-content>
           <ion-footer>
               <ion-item slot= "end" tappable routerLink = "core/login" routerDirection= "root">
+                <ion-icon name = "information-circle-outline" slot="start" ></ion-icon>
+                <ion-label>About</ion-label>
+                <ion-icon name="ios-arrow-forward"></ion-icon>
+              </ion-item>
+           
+
+              <ion-item slot= "end" tappable routerLink = "core/about" routerDirection= "root">
                 <ion-icon name = "ios-power" slot="start" ></ion-icon>
                 <ion-label>Logout</ion-label>
                 <ion-icon name="ios-arrow-forward"></ion-icon>
