--- a/redCore/src/global.scss
+++ b/redCore/src/global.scss
@@ -15,6 +15,19 @@
     border-left: 3px solid var(--ion-color-primary);
     background-color: var(--ion-color-primary);
 }
+ion-col {
+    height: 30px;
+    
+    ion-avatar {
+        margin: auto;
+        width:100% !important;
+        height : 100% !important;
+        max-width: 100px !important;  //any size
+        max-height: 100px !important;
+    }
+
+}
+
 ion-title {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -24,6 +37,7 @@ ion-title {
     height: 27px;
    }
 }
+
 
 #banner {
     .user-avatar {
