--- a/redCore/src/global.scss
+++ b/redCore/src/global.scss
@@ -15,6 +15,7 @@
     border-left: 3px solid var(--ion-color-primary);
     background-color: var(--ion-color-primary);
 }
+ion-menu{
 ion-col {
     height: 30px;
     
@@ -37,7 +38,7 @@ ion-title {
     height: 27px;
    }
 }
-
+}
 
 #banner {
     .user-avatar {
