--- a/redCore/src/app/nevera/nevera.page.html
+++ b/redCore/src/app/nevera/nevera.page.html
@@ -10,5 +10,5 @@
 </ion-header>
 
 <ion-content>
-  <iframe style="width:100%; height:100%" src="http://fridge.coredumped.es"></iframe>
+  <iframe allowfullscreen frameborder="0" width="100%" height="100%" src="http://fridge.coredumped.es"></iframe>
 </ion-content>
